barabashka stole jacoco test